@@ -14,7 +14,7 @@
 
 #include <fstream>
 #include <stxxl/bits/mng/mng.h>
-#include <stxxl/bits/version.h>
+#include <stxxl/version.h>
 #include <stxxl/bits/common/log.h>
 #include <stxxl/bits/common/error_handling.h>
 
