@@ -34,6 +34,7 @@ STXXL_HEADERS		+= vector stack queue priority_queue deque map
 STXXL_HEADERS		+= algorithm scan sort ksort stable_ksort random_shuffle
 STXXL_HEADERS		+= io mng stream
 STXXL_HEADERS		+= random timer mallocstats aligned_alloc types stats
+STXXL_HEADERS		+= version.h
 STXXL_BITS		+= $(HEADER_FILES_BITS)
 STXXL_BITS		+= $(HEADER_FILES_COMMON:%=common/%)
 STXXL_BITS		+= $(HEADER_FILES_COMPAT:%=compat/%)
